[package]
authors = ["Yuriy Voshchepynets <yuriy.voshchepynets@ckreator.com>"]
description = "Diesel ORM bindings for lunatic"
edition = "2021"
license = "Apache-2.0/MIT"
name = "lunatic-diesel"
readme = "README.md"
repository = "https://github.com/SquattingSocrates/lunatic-diesel"
version = "0.1.0"

[dependencies]
bigdecimal = ">=0.0.13, < 0.4.0"
bincode = "1.3"
diesel = {version = "2.0", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]}
lunatic = "0.12.0"
lunatic-sqlite-api = "0.13.0"

[dev-dependencies]
dotenvy = "0.15"
lunatic-diesel = {path = "./"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-wasi"]
